<resources>
    <string name="app_name">Real Estate Manager</string>
    <string name="common_ok">OK</string>
    <string name="common_cancel">Cancel</string>
    <string name="common_sold">Sold</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_list">RealEstate list</string>
    <string name="menu_description">Real estate description</string>
    <string name="menu_map">Map</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_loan_simulator">Loan simulator</string>

    <string name="toolbar_search">Search</string>
    <string name="toolbar_modification">Modification</string>
    <string name="toolbar_creation">Creation</string>

    <string name="master_detail_description">Description</string>
    <string name="master_detail_media">Media</string>
    <string name="master_detail_surface">Surface</string>
    <string name="master_detail_location">Location</string>
    <string name="master_detail_room_number">Number of rooms</string>
    <string name="master_detail_bathroom_number">Number of bathrooms</string>
    <string name="master_detail_bedroom_number">Number of bedrooms</string>

    <string name="real_estate_type">type</string>
    <string name="real_estate_price">Price (in dollar)</string>
    <string name="real_estate_surface">Surface (in m2)</string>
    <string name="real_estate_description">Description</string>
    <string name="real_estate_school">School</string>
    <string name="real_estate_commerce">Commerce</string>
    <string name="real_estate_parc">Parc</string>
    <string name="real_estate_train_station">Train station</string>
    <string name="real_estate_entry_date">Entry date</string>
    <string name="real_estate_exit_date">Exit date</string>
    <string name="real_estate_agent">Agent</string>
    <string name="real_estate_address">Address</string>
    <string name="real_estate_no_wifi_address">You need to have a network connection to enter an address</string>
    <string name="real_estate_total_room_number">Total room</string>
    <string name="real_estate_bedroom_number">Bedroom</string>
    <string name="real_estate_bathroom_number">Bathroom</string>
    <string name="submit_btn">Submit</string>
    <string name="real_estate_photo">Photo</string>
    <string name="real_estate_photo_name">Photo name</string>
    <string name="photo_btn">Photo</string>
    <string name="error_photo_format">The image sent is not in the correct format, please try again</string>
    <string name="error_incorrect_price">Price is incorrect</string>

    <string name="real_estate_edit_warning">You must select a detail first !</string>
    <string name="real_estate_edit_button">Edit</string>

    <string name="address_search_address">Address</string>
    <string name="address_search_more_info_text">Hmmm, I need more info to find…</string>
    <string name="address_search_missing_location_permissions_snackbar_text">You have not accepted the geolocation, you can go to the settings to modify</string>

    <string name="geolocation_popup_title">You must enable your location to have the full experience of the app !</string>
    <string name="geolocation_popup_enable_button">Enable</string>

    <string name="search_min_surface">Min surface</string>
    <string name="search_max_surface">Max surface</string>
    <string name="search_min_price">Min price</string>
    <string name="search_max_price">Max price</string>
    <string name="search_min_photo_number">Minimum photo number</string>
    <string name="search_sold">Sold</string>
    <string name="search_validation">Validate search</string>
    <string name="search_city">City</string>

    <string name="settings_euro">Switch to euro</string>

    <string name="loan_simulator_loan_edit_text">Enter your loan here !</string>
    <string name="loan_simulator_monthly_payment">Monthly payment</string>
    <string name="loan_simulator_total_cost">Total cost</string>
    <string name="loan_simulator_15_years">15 years</string>
    <string name="loan_simulator_20_years">20 years</string>
    <string name="loan_simulator_25_years">25 years</string>
    <string name="loan_simulator_interest_rate">Interest rate</string>
    <string name="loan_simulator_notary_fees">Notary fees</string>
    <string name="loan_simulator_loan">Loan</string>
    <string name="loan_simulator_total">Total</string>
</resources>
