<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navRealEstateList"
            android:icon="@drawable/ic_search"
            android:title="@string/menu_list" />
        <item
            android:id="@+id/navRealEstateMap"
            android:icon="@drawable/ic_pin"
            android:title="@string/menu_map" />
        <item
            android:id="@+id/navLoanSimulator"
            android:icon="@drawable/ic_loan"
            android:title="@string/menu_loan_simulator" />
        <item
            android:id="@+id/navRealEstateSettings"
            android:icon="@drawable/ic_settings"
            android:title="@string/menu_settings" />
    </group>
</menu>