<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".app.modules.loanSimulator.LoanSimulatorActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/loanTextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/loanEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:hint="@string/loan_simulator_loan_edit_text"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <RadioGroup
            android:id="@+id/yearsRadioGroup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="12dp"
            android:checkedButton="@id/fifteenYearsRadioButton"
            android:orientation="horizontal"
            android:weightSum="3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/loanTextInputLayout">

            <RadioButton
                android:id="@+id/fifteenYearsRadioButton"
                style="@style/GenderRadioButton"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:text="@string/loan_simulator_15_years" />

            <RadioButton
                android:id="@+id/twentyYearsRadioButton"
                style="@style/GenderRadioButton"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:text="@string/loan_simulator_20_years" />

            <RadioButton
                android:id="@+id/twentyFiveYearsRadioButton"
                style="@style/GenderRadioButton"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:text="@string/loan_simulator_25_years" />
        </RadioGroup>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/monthlyPaymentTitleTextView"
            style="@style/Heading300"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:text="@string/loan_simulator_monthly_payment"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/yearsRadioGroup" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/monthlyPaymentTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:background="@color/grayscale_200"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="28sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/monthlyPaymentTitleTextView" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/totalCostTitleTextView"
            style="@style/Heading300"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:text="@string/loan_simulator_total_cost"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/monthlyPaymentTextView" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/totalCostTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:background="@color/grayscale_200"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="28sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/totalCostTitleTextView" />

        <com.github.mikephil.charting.charts.PieChart
            android:id="@+id/pieChart"
            android:layout_width="0dp"
            android:layout_height="400dp"
            android:layout_marginTop="12dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/totalCostTextView" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>